<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="share_url">https://practicum.yandex.ru/learn/android-developer-plus</string>
    <string name="message_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="my_email">chidori_rasengan@yayaya.bu</string>
    <string name="terms_of_use_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear_input">clear input</string>
    <string name="back">назад</string>
    <string name="forward">forward</string>
    <string name="cover">cover</string>
    <string name="something_went_wrong">something went wrong :(</string>
    <string name="no_network_message">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="no_results_message">Ничего не нашлось</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="start_stop">start/stop</string>
    <string name="add_to_library">add to library</string>
    <string name="like">like</string>
    <string name="current_time_start">00:00</string>
    <string name="favorites_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists_created">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_tracks">\u00A0\u00A0\u00A0Избранные треки\u00A0\u00A0\u00A0</string>
    <string name="playlists">\u00A0\u00A0\u00A0Плейлисты\u00A0\u00A0\u00A0</string>
    <string name="add_photo">add photo</string>
    <string name="create">Создать</string>
    <string name="description">Описание</string>
    <string name="label_title">Название*</string>
    <string name="add_playlist_exit_title">Завершить создание плейлиста?</string>
    <string name="add_playlist_exit_message">Все несохраненные данные будут потеряны</string>
    <string name="add_playlist_exit_cancel">Отмена</string>
    <string name="add_playlist_exit_confirm">Завершить</string>
    <string name="add_playlist_created">Плейлист "%1$s" создан</string>
    <string name="add_playlist_track_added">Добавлено в плейлист "%1$s"</string>
    <string name="player_track_added">Добавлено в плейлист "%1$s"</string>
    <string name="player_track_exists">Трек уже добавлен в плейлист "%1$s"</string>
    <string name="delete_track_dialogue">Хотите удалить трек?</string>
    <string name="no_capitals">НЕТ</string>
    <string name="yes_capitals">ДА</string>
    <string name="empty_tracklist_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit">Редактировать информацию</string>
    <string name="remove_playlist">Удалить плейлист</string>
    <string name="delete_playlist_dialogue">Хотите удалить плейлист?</string>
    <string name="save">Сохранить</string>
    <string name="edit_button">Редактировать</string>
    <string name="data_saved">Данные сохранены</string>
    <string name="no_tracks_message">В этом плейлисте нет треков</string>
    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>

</resources>

