<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundPrimaryVariant"
    android:orientation="vertical"
    tools:context=".main.ui.MainActivity">


    <com.google.android.material.appbar.MaterialToolbar
        style="@style/ToolbarStyle"
        android:layout_marginBottom="@dimen/space_8dp"
        app:title="@string/playlist_maker"
        app:titleTextAppearance="@style/ToolbarTextAppearance"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/search_button"
        style="@style/LargeButtonStyle"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <Button
        android:id="@+id/library_button"
        style="@style/LargeButtonStyle"
        android:text="@string/library"
        app:icon="@drawable/library" />

    <Button
        android:id="@+id/settings_button"
        style="@style/LargeButtonStyle"
        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout>
