<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundPrimary"
    tools:context=".SettingsActivity">

    <TextView
        android:text="@string/settings"
        android:textColor="?attr/textPrimary"
        style="@style/HeadlineStyle" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small">

        <TextView
            android:text="@string/dark_theme"
            style="@style/SettingsItemText" />

        <androidx.appcompat.widget.SwitchCompat
            style="@style/SettingsItemIcon"
            android:layout_marginVertical="0dp"
            app:thumbTint="?attr/switcherPrimary"
            app:trackTint="?attr/switcherPrimaryVariant" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/share_app_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/share_app"
            style="@style/SettingsItemText" />
        <TextView
            app:drawableEndCompat="@drawable/share"
            style="@style/SettingsItemIcon" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/contact_support_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/contact_support"
            style="@style/SettingsItemText" />
        <TextView
            app:drawableEndCompat="@drawable/support"
            style="@style/SettingsItemIcon" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/terms_of_use_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/terms_of_use"
            style="@style/SettingsItemText" />

        <TextView
            app:drawableEndCompat="@drawable/arrow_forward"
            style="@style/SettingsItemIcon" />
    </FrameLayout>

</LinearLayout>