<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/addPlaylistButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/retryButtonBackground"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/new_playlist"
        android:textAllCaps="false"
        android:textColor="?attr/backgroundPrimary"
        android:textSize="14sp"
        app:cornerRadius="54dp" />

    <ImageView
        android:id="@+id/noPlaylistsImage"
        android:layout_width="@dimen/image_medium"
        android:layout_height="@dimen/image_medium"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/something_went_wrong"
        android:scaleType="centerCrop"
        android:src="?attr/noResultsImage" />

    <TextView
        android:id="@+id/noPlaylistsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/no_playlists_created"
        android:textAlignment="center"
        android:textColor="?attr/foreground"
        android:textSize="@dimen/text_size_large" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/space_8dp"
        android:layout_weight="1"
        android:visibility="gone" />

</LinearLayout>
