<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundPrimary"
    tools:context=".library.ui.AddPlaylistFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarButtonBack"
        style="@style/ToolbarStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/back"
        app:navigationIcon="@drawable/back"
        app:navigationIconTint="?attr/textPrimary"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/ToolbarTextAppearance"
        app:titleTextColor="?attr/textPrimary" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/playlistImageContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarButtonBack">

        <FrameLayout
            android:id="@+id/playlistFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:foreground="@drawable/dashed_border">

            <ImageView
                android:id="@+id/playlistImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="?attr/backgroundPrimary"
                android:contentDescription="@string/add_photo"
                android:scaleType="center"
                android:src="@drawable/add_photo" />

        </FrameLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistTitleLayout"
        style="@style/Widget.Playlist.TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:hintTextColor="@color/text_input_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistImageContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_title"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistDescriptionLayout"
        style="@style/Widget.Playlist.TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:hintTextColor="@color/text_input_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistTitleLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="@dimen/space_16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/yandex_gray"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
