<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundPrimary"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarButtonBack"
            style="@style/ToolbarStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationContentDescription="@string/back"
            app:navigationIcon="@drawable/back"
            app:navigationIconTint="?attr/textPrimary"
            app:titleTextAppearance="@style/ToolbarTextAppearance"
            app:titleTextColor="?attr/textPrimary" />


        <ImageView
            android:id="@+id/ivCoverArtwork"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/space_16dp"
            android:contentDescription="@string/cover"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarButtonBack" />

        <TextView
            android:id="@+id/tvTrackTitle"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCoverArtwork" />


        <TextView
            android:id="@+id/tvArtistName"
            style="@style/TextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/space_12dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@+id/tvTrackTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTrackTitle" />


        <com.example.playlistmaker.player.ui.PlaybackButtonView
            android:id="@+id/playButton"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginVertical="40dp"
            android:contentDescription="@string/start_stop"
            app:layout_constraintEnd_toStartOf="@+id/likeButton"
            app:layout_constraintStart_toEndOf="@+id/leftButton"
            app:layout_constraintTop_toBottomOf="@+id/tvArtistName"
            app:pause="?attr/pause"
            app:play="?attr/play" />

        <ImageButton
            android:id="@+id/leftButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginVertical="54dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/add_to_library"
            android:src="@drawable/add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvArtistName" />

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginVertical="54dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/like"
            android:src="@drawable/like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvArtistName" />


        <TextView
            android:id="@+id/tvCurrentTime"
            style="@style/TextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/current_time_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playButton" />

        <TextView
            android:id="@+id/tvTrackDurationLabel"
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginTop="30dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentTime" />

        <TextView
            android:id="@+id/tvCollectionNameLabel"
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginVertical="@dimen/space_12dp"
            android:text="@string/album"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTrackDurationLabel" />

        <TextView
            android:id="@+id/tvReleaseDateLabel"
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginVertical="@dimen/space_12dp"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCollectionNameLabel" />

        <TextView
            android:id="@+id/tvPrimaryGenreNameLabel"
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginVertical="@dimen/space_12dp"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReleaseDateLabel" />

        <TextView
            android:id="@+id/tvCountryLabel"
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginVertical="@dimen/space_12dp"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrimaryGenreNameLabel" />


        <TextView
            android:id="@+id/tvTrackDuration"
            style="@style/Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginTop="30dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentTime" />

        <TextView
            android:id="@+id/tvCollectionName"
            style="@style/Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginVertical="@dimen/space_12dp"
            android:ellipsize="end"
            android:maxWidth="200dp"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTrackDuration" />

        <TextView
            android:id="@+id/tvReleaseDate"
            style="@style/Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginVertical="@dimen/space_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCollectionName" />

        <TextView
            android:id="@+id/tvPrimaryGenreName"
            style="@style/Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginVertical="@dimen/space_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate" />

        <TextView
            android:id="@+id/tvCountry"
            style="@style/Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16dp"
            android:layout_marginVertical="@dimen/space_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrimaryGenreName" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/playlistsBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_bg"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_sheet_handle" />

        <Button
            android:id="@+id/newPlaylistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space_12dp"
            android:backgroundTint="?attr/retryButtonBackground"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            android:textColor="?attr/backgroundPrimary"
            android:textSize="14sp"
            app:cornerRadius="54dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/playlist_item_bottomsheet" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
